Css Accueil et media Queries

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body {
     position: fixed;
     top:0;
     left: 0;
-    border-right: 1px dashed #f1f1f1;
     z-index: 5;
     transition: all 0.2s ease-in-out;
 }
@@ -64,12 +63,13 @@ body {
     background: #333;
 }
 .cercle-portrait {
-    margin: 20px;
+    margin: 20px 0;
     width: 150px;
     height: 150px;
     border-radius: 50%;
     position: relative;
-    box-shadow: 26px 26px 53px #292929, -26px -26px #3d3d3d;
+    box-shadow: 26px 26px 53px #292929,
+                 -26px -26px #3d3d3d;
 }
 .cercle-portrait img {
     width: 150px;
@@ -97,9 +97,22 @@ body {
 @media screen and (max-width: 1300px) {
     .nav-gauche{
         left:-300px!important;
+        width: 250px;
+        min-height: 300px;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
     .menu-visible {
         left: 0px !important;
+    }
+    .blocs-menu:nth-child(1){
+        display: none;
+    }
+    .blocs-menu:nth-child(7){
+        display: none;
     }
     .btn-rond-menu {
         width:70px;
@@ -162,5 +175,218 @@ body {
         top:0;
         transform: rotate(-45deg);
         transition: bottom 300ms ease, transform 300ms 300ms ease;
+    }
+}
+/* ------- Accueil-------------- */
+
+.accueil {
+    background: url(ressources/accueil.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    height: 100vh;
+    min-height: 900px;
+    width: calc(100% - 300px);
+    margin-left: auto;
+    position: relative;
+}
+h1 {
+    font-size: 90px;
+    font-family: 'Abril Fatface', sans-serif;
+    margin: 0 60px;
+    padding-top: 210px;
+}
+.txt-animation {
+    font-size: 30px;
+    margin: 10px 0 10px 60px;
+}
+.btn-acc {
+    display: inline-flex;
+    width: 200px;
+    height: 50px;
+    text-decoration: none;
+    background: #000;
+    justify-content: center;
+    align-items: center;
+    color: #f1f1f1;
+    margin: 10px 0 0 0;
+    border-radius: 2px;
+    font-size: 18px;
+}
+.btnacc1 {
+    margin: 10px 0 0 60px;
+}
+.btnacc2 {
+    background: transparent;
+    border: 2px solid black;
+    color: black;
+    font-weight: 700;
+}
+.medias {
+    display: flex;
+    margin-left: 60px;
+    margin-top: 30px;
+}
+.media {
+    width: 60px;
+    height: 60px;
+    background: #333;
+    border-radius: 50%;
+    margin-right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.media2 {
+    background: transparent;
+    border: 2px solid #333;
+}
+.icone-medias {
+    width: 30px;
+}
+.btn-rond {
+    width: 70px;
+    height: 70px;
+    position: absolute;
+    bottom: 20px;
+    left: 60px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    box-shadow: 0 0 0 0 #333;
+    background: #333;
+    animation: pulse 0.5s infinite;
+}
+@keyframes pulse {
+    to {
+        box-shadow: 0 0 0 8px rgba(255,255,0,0.01) ;
+    }
+}
+.logo-btn-rond-acc {
+    width: 35px;
+}
+/* Media Query pour l'accueil */
+@media screen and (max-width: 1300px){
+
+    .accueil {
+        width: 100%;
+        background-position: center;
+    }
+    
+}
+@media screen and (max-width: 1000px) {
+    
+    .accueil {
+        height: 700px;
+        min-height: 0;
+    }
+    h1 {
+        font-size: 70px;
+        margin: 0 30px 0 30px;
+    }
+    .accueil p {
+        margin: 20px 0 20px 30px;
+    }
+    .btnacc1 {
+        margin: 10px 0 0 30px;
+    }
+    .medias {
+        margin-left: 30px;
+    }
+    .btn-rond {
+        display: none;
+    }
+
+}
+@media screen and (max-width: 700px) {
+    
+    .accueil {
+        height: 600px;
+
+    }
+    h1 {
+        font-size: 50px;
+        margin: 0 30px;
+    }
+    .accueil p {
+        font-size: 20px;
+    }
+    .btn-rond-menu {
+        width: 60px;
+        height: 60px;
+    }
+}
+@media screen and (max-width: 500px) {
+    
+    h1 {
+        font-size: 50px;
+        margin: 0 30px;
+    }
+    .accueil p {
+        font-size: 20px;
+    }
+    .btn-acc {
+        width: 120px;
+        font-size: 13px;
+        height: 40px;
+        margin: 10px 0 0 5px;
+    }
+    .btnacc1 {
+        margin: 10px 0 0 30px;
+    }
+    .media {
+        width: 40px;
+        height: 40px;
+    }
+    .icone-medias {
+        width: 20px;
+    }
+}
+@media screen and (max-width: 450px){
+
+    .btn-rond-menu {
+        width: 50px;
+        height: 50px;
+    }
+    .cont-ligne {
+        width: 20px;
+        height: 38px;
+    }
+    .ligne-unique {
+        height: 3px;
+    }
+    .ligne-unique::before {
+        bottom: 8px;
+        height: 3px;
+    }
+    .ligne-unique::after {
+        top: 8px;
+        height: 3px;
+    }
+    .accueil {
+        height: 500px;
+    }
+    h1 {
+        margin: 0 30px 0 5px;
+        padding-top: 120px;
+    }
+    .accueil p {
+        margin: 30px 0 0 5px;
+    }
+    .btn-acc {
+        width: 100px;
+        font-size: 12px;
+        height: 35px;
+        margin: 30px 0 0 5px;
+    }
+    .medias {
+        margin-top: 30px;
+        margin-left: 5px;
+    }
+    .icone-medias {
+        width: 20px;
     }
 }
