--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     width: 300px;
     height: 100vh;
     min-height: 800px;
-    background: #333;
+    background: #29323c;
     position: fixed;
     top:0;
     left: 0;
@@ -60,7 +60,7 @@ body {
 .blocs-menu:nth-child(1){
     width:100%;
     height: 25%;
-    background: #333;
+    background: #29323c;
 }
 .cercle-portrait {
     margin: 20px 0;
@@ -68,8 +68,8 @@ body {
     height: 150px;
     border-radius: 50%;
     position: relative;
-    box-shadow: 26px 26px 53px #292929,
-                 -26px -26px #3d3d3d;
+    box-shadow: 26px 26px 53px #29323c,
+                 -26px -26px #465566;
 }
 .cercle-portrait img {
     width: 150px;
@@ -404,3 +404,138 @@ h1 {
     }
     
 } 
+/* ------------------Présentation-------------------- */
+.presentation {
+    width:100%;
+    position: relative;
+    overflow: hidden;
+    /* border-top: 1px dashed #333;
+    border-bottom: 1px dashed #333; */
+    color: #e7e7e7;
+}
+.fond-forme {
+    background: #485563;
+    background-image: linear-gradient(to right, #29323c, #485563 );
+    width: 2300px;
+    height: 1000px;
+    position: absolute;
+    transform: rotate(-45deg) translate(100px) translate(-15px);
+    z-index: -1;
+}
+.titre-pres {
+    font-size: 40px;
+    text-align: center;
+    margin:50px 0 70px 0;
+    padding-left: 300px;
+}
+.container-presentation {
+    display: flex;
+    width:100%;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    margin: 50px 0 150px 0;
+    padding-left: 300px;
+}
+.pres-gauche {
+    width: 600px;
+    flex-shrink: 0;
+    margin-bottom: 50px;
+    padding-left: 120px;
+    padding-top: 20px;
+}
+.pres-gauche h3 {
+    text-align: center;
+    font-size: 25px;
+    letter-spacing: 2px;
+}
+.pres-gauche hr {
+    width: 60px;
+    margin: 0 auto 20px auto;
+}
+.pres-gauche p {
+    text-align: justify;
+}
+.pres-droite {
+    width: 600px;
+    flex-shrink: 0;
+    display: flex;
+    justify-content: flex-start;
+}
+.liste-presentation {
+    list-style-type: none;
+    padding: 10px 0 50px 110px;
+}
+.chiffre-style {
+    font-family: 'Abril Fatface', sans-serif;
+    font-size: 40px;
+}
+.txt-liste {
+    font-size: 27px;
+    display: inline;
+}
+/* Media Query pour la présentation */
+@media screen and (max-width: 1300px){
+
+   .container-presentation, .titre-pres {
+    padding-left: 0px;
+   }
+   .fond-forme {
+    width: 100%;
+    height: 150%;
+    transform: rotate(0) translateY(0) translateX(0);
+}
+    
+} 
+@media screen and (max-width: 1100px){
+
+    
+    .titre-pres {
+        margin: 0 0 20px 0;
+        padding-top:  50px;
+    }
+    .container-presentation {
+        flex-direction: column;
+    }
+    .pres-gauche {
+        width: 80%;
+        flex-shrink: 1;
+        margin-bottom: 10px;
+        padding: 20px 0;
+    }
+    .pres-gauche h3 {
+        font-size: 20px;
+        letter-spacing: 0px;
+    }
+    .pres-gauche p {
+        font-size: 16px;
+
+    }
+    .pres-droite {
+        width: 80%;
+        flex-shrink: 1;
+    }
+    .liste-presentation {
+        padding: 0 0;
+    }
+ } 
+ @media screen and (max-width: 700px){
+
+    .container-presentation {
+        margin-top: 10px;
+        margin-bottom: 70px;
+    }
+    .titre-pres {
+        font-size: 24px;
+        margin:0 10px;
+    }
+    .pres-gauche h3 {
+        font-size: 20px;
+    }
+    .chiffre-style {
+        font-size: 30px;
+    }
+    .txt-liste {
+        font-size: 17px;
+    }
+ }
