--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     width: 300px;
     height: 100vh;
     min-height: 800px;
-    background: #29323c;
+    background: #2D6ABB;
     position: fixed;
     top:0;
     left: 0;
@@ -60,7 +60,8 @@ body {
 .blocs-menu:nth-child(1){
     width:100%;
     height: 25%;
-    background: #29323c;
+    background: #2D6ABB; 
+    
 }
 .cercle-portrait {
     margin: 20px 0;
@@ -69,7 +70,7 @@ body {
     border-radius: 50%;
     position: relative;
     box-shadow: 26px 26px 53px #29323c,
-                 -26px -26px #465566;
+                 -26px -26px #376fb8;
 }
 .cercle-portrait img {
     width: 150px;
@@ -99,7 +100,6 @@ body {
         left:-300px!important;
         width: 250px;
         min-height: 300px;
-
         display: flex;
         justify-content: center;
         align-items: center;
@@ -180,7 +180,7 @@ body {
 /* ------- Accueil-------------- */
 
 .accueil {
-    background: url(ressources/accueil.jpg);
+    background: url(ressources/AccuilSombre.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
@@ -195,17 +195,19 @@ h1 {
     font-family: 'Abril Fatface', sans-serif;
     margin: 0 60px;
     padding-top: 210px;
+    color: #f1f1f1;
 }
 .txt-animation {
     font-size: 30px;
     margin: 10px 0 10px 60px;
+    color: #e7e7e7;
 }
 .btn-acc {
     display: inline-flex;
     width: 200px;
     height: 50px;
     text-decoration: none;
-    background: #000;
+    background: #376fb8;
     justify-content: center;
     align-items: center;
     color: #f1f1f1;
@@ -218,8 +220,8 @@ h1 {
 }
 .btnacc2 {
     background: transparent;
-    border: 2px solid black;
-    color: black;
+    border: 2px solid #f1f1f1;
+    color: #f1f1f1;
     font-weight: 700;
 }
 .medias {
@@ -230,7 +232,7 @@ h1 {
 .media {
     width: 60px;
     height: 60px;
-    background: #333;
+    background: #376fb8;
     border-radius: 50%;
     margin-right: 10px;
     display: flex;
@@ -239,8 +241,8 @@ h1 {
     cursor: pointer;
 }
 .media2 {
-    background: transparent;
-    border: 2px solid #333;
+    background: #376fb8;
+    border: 2px solid #376fb8;
 }
 .icone-medias {
     width: 30px;
@@ -257,7 +259,7 @@ h1 {
     align-items: center;
     cursor: pointer;
     box-shadow: 0 0 0 0 #333;
-    background: #333;
+    background: #376fb8;
     animation: pulse 0.5s infinite;
 }
 @keyframes pulse {
@@ -415,7 +417,7 @@ h1 {
 }
 .fond-forme {
     background: #485563;
-    background-image: linear-gradient(to right, #29323c, #485563 );
+    background-image: linear-gradient(to right, #29323c, #376fb8 );
     width: 2300px;
     height: 1000px;
     position: absolute;
