--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ html {
 body {
     font-family: 'Poppins', sans-serif;
     background: #f1f1f1;
+    /* background-image: linear-gradient(to right, #29323c, #376fb8 ); */
+    background-image: linear-gradient(41deg, rgba(107, 107, 107, 0.04) 0%, rgba(107, 107, 107, 0.04) 8%,rgba(31, 31, 31, 0.04) 8%, rgba(31, 31, 31, 0.04) 100%),linear-gradient(9deg, rgba(228, 228, 228, 0.04) 0%, rgba(228, 228, 228, 0.04) 62%,rgba(54, 54, 54, 0.04) 62%, rgba(54, 54, 54, 0.04) 100%),linear-gradient(124deg, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 37%,rgba(233, 233, 233, 0.04) 37%, rgba(233, 233, 233, 0.04) 100%),linear-gradient(253deg, rgba(201, 201, 201, 0.04) 0%, rgba(201, 201, 201, 0.04) 55%,rgba(47, 47, 47, 0.04) 55%, rgba(47, 47, 47, 0.04) 100%),linear-gradient(270deg, rgba(172, 172, 172, 0.04) 0%, rgba(172, 172, 172, 0.04) 33%,rgba(26, 26, 26, 0.04) 33%, rgba(26, 26, 26, 0.04) 100%),linear-gradient(64deg, rgba(11, 11, 11, 0.04) 0%, rgba(11, 11, 11, 0.04) 38%,rgba(87, 87, 87, 0.04) 38%, rgba(87, 87, 87, 0.04) 100%),linear-gradient(347deg, rgba(199, 199, 199, 0.04) 0%, rgba(199, 199, 199, 0.04) 69%,rgba(4, 4, 4, 0.04) 69%, rgba(4, 4, 4, 0.04) 100%),linear-gradient(313deg, rgba(36, 36, 36, 0.04) 0%, rgba(36, 36, 36, 0.04) 20%,rgba(91, 91, 91, 0.04) 20%, rgba(91, 91, 91, 0.04) 100%),linear-gradient(90deg, rgb(3,5,23),rgb(27,107,159));
 }
 /* ----------- Nav--------------- */
 .nav-gauche {
@@ -18,6 +20,7 @@ body {
     height: 100vh;
     min-height: 800px;
     background: #2D6ABB;
+    background-image: linear-gradient(to left, #29323c, #376fb8 );
     position: fixed;
     top:0;
     left: 0;
@@ -61,6 +64,7 @@ body {
     width:100%;
     height: 25%;
     background: #2D6ABB; 
+    background-image: linear-gradient(to left, #29323c, #376fb8 );
     
 }
 .cercle-portrait {
@@ -69,8 +73,7 @@ body {
     height: 150px;
     border-radius: 50%;
     position: relative;
-    box-shadow: 26px 26px 53px #29323c,
-                 -26px -26px #376fb8;
+    box-shadow: 26px 26px 53px #29323c;
 }
 .cercle-portrait img {
     width: 150px;
@@ -194,7 +197,7 @@ h1 {
     font-size: 90px;
     font-family: 'Abril Fatface', sans-serif;
     margin: 0 60px;
-    padding-top: 210px;
+    padding-top: 300px;
     color: #f1f1f1;
 }
 .txt-animation {
@@ -258,7 +261,7 @@ h1 {
     justify-content: center;
     align-items: center;
     cursor: pointer;
-    box-shadow: 0 0 0 0 #333;
+    box-shadow: 0 0 0 0 #f1f1f1;
     background: #376fb8;
     animation: pulse 0.5s infinite;
 }
@@ -416,18 +419,18 @@ h1 {
     color: #e7e7e7;
 }
 .fond-forme {
-    background: #485563;
-    background-image: linear-gradient(to right, #29323c, #376fb8 );
+    /* background: #485563;
+    background-image: linear-gradient(to right, #29323c, #376fb8 ); */
     width: 2300px;
     height: 1000px;
     position: absolute;
-    transform: rotate(-45deg) translate(100px) translate(-15px);
+    /* transform: rotate(-45deg) translate(100px) translate(-15px); */
     z-index: -1;
 }
 .titre-pres {
     font-size: 40px;
     text-align: center;
-    margin:50px 0 70px 0;
+    margin:70px 0 70px 0;
     padding-left: 300px;
 }
 .container-presentation {
@@ -436,7 +439,7 @@ h1 {
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    margin: 50px 0 150px 0;
+    margin: 50px 0 100px 0;
     padding-left: 300px;
 }
 .pres-gauche {
@@ -541,3 +544,121 @@ h1 {
         font-size: 17px;
     }
  }
+
+ /* ------------- Portfolio ------------ */
+
+ .portfolio {
+    width: 100%;
+ }
+ .titre-port {
+    text-align: center;
+    padding: 50px 0;
+    font-size: 50px;
+    padding-left: 300px;
+    color: #f1f1f1;
+ }
+
+ .cont-portfolio {
+    width: 100%;
+    height: auto;
+    margin: 0 auto 100px auto;
+    padding-left: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+
+ }
+ .item {
+    margin: 20px;
+    width: 420px;
+    height: 400px;
+    background: #f0f2f0;
+    color: #333;
+    transition: transform 0.3s ease-out;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+ }
+ .item:hover {
+    transform: translatey(-5px);
+ }
+ .cont-img-port {
+    width: 100%;
+    height: 220px;
+    overflow: hidden;
+ }
+ .cont-img-port img {
+    width: 100%;
+    height: auto;
+ }
+ .item h3 {
+    padding: 10px 10px 0;
+    font-size: 22px;
+ }
+ .item p {
+    padding: 10px 10px 0;
+ }
+ .btn-projets {
+    display: block;
+    margin: 10px;
+    width: 180px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #333;
+    text-decoration: none;
+    border: 1px solid #333;
+    border-radius: 3px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-projets::after {
+    content: '';
+    height: 240px;
+    width: 100px;
+    background: rgba(255,255,255,0.4);
+    display: block;
+    position: absolute;
+    left: -150px;
+    top: -50px;
+    transform: rotate(-45deg);
+}
+.btn-projets:hover::after {
+    transition: transform 0.3s 0.1s linear;
+    transform: translateX(400px);
+}
+
+/* Media Query pour la portfolio */
+
+@media screen and (max-width: 1300px){
+
+   .cont-portfolio {
+    padding-left: 0;
+   }
+   .titre-port {
+    font-size: 40px;
+    margin: 50px 0 70px;
+    padding-left: 0;
+   }
+ }
+ @media screen and (max-width: 500px){
+
+    .titre-port {
+     margin: 10px 0;
+     padding: 30px 0;
+    }
+    .item {
+        height: 420px;
+    }
+    .cont-img-port {
+        height: auto;
+    }
+  }
+  @media screen and (max-width: 340px){
+
+    .item {
+        height: 380px;
+    }
+   
+  }
