Création section compétences HTML/CSS

--- a/style.css
+++ b/style.css
@@ -621,14 +621,10 @@ h1 {
     position: relative;
    
 }
-
-
 .btn-projets:hover {
     box-shadow: 0 0 10px #376fb8;
 }
-
 /* Media Query pour la section  portfolio */
-
 @media screen and (max-width: 1300px){
 
    .cont-portfolio {
@@ -654,9 +650,142 @@ h1 {
     }
   }
   @media screen and (max-width: 340px){
-
     .item {
         height: 380px;
     }
-   
   }
+
+  /*------------ Section compétences--------------- */
+
+
+  .section-range{
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 200px;
+    border-bottom: 1px dashed #333;
+    /* background: #485563;
+    background-image: linear-gradient(to left, #29323c, #376fb8 ); */
+    color: #f1f1f1;
+    position: relative;
+    z-index: -1;
+  }
+  .range-cont {
+    position:relative;
+  }
+
+  .titre-exp {
+    font-size: 40px;
+    text-align: center;
+    margin: 80px 0 90px 0;
+    padding-left: 300px;
+    color: #f1f1f1;
+  }
+  .grille-skill {
+    display: grid;
+    grid-template: repeat(3, 80px) / repeat(2, 500px);
+    grid-gap: 50px;
+    padding-left: 300px;
+  }
+  .barre-skill {
+    height: 15px;
+    background: rgb(167,146, 243);
+    border-radius: 5px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+  }
+  .barre-grises {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    width: 500px;
+    height: 15px;
+    background: rgb(216,216,216);
+    border-radius: 5px;
+}
+.b1 {
+    width: 60%;
+}
+.b2 {
+    width: 70%;
+    background: rgb(243,237,146);
+}
+.b3 {
+    width: 60%;
+    background: rgb(243,237,146);
+}
+.b4 {
+    width: 60%;
+}
+.b5 {
+    width: 70%;
+}
+.b6 {
+    width: 60%;
+    background: rgb(243,237,146);
+}
+.label-skill {
+    font-size: 24px;
+}
+/* Medias Compétences */
+
+@media screen and (max-width: 1400px) {
+    .grille-skill{
+        grid-template: repeat(3,80px) / repeat(2,450px);
+    }
+    .barre-grises {
+        width: 450px;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+
+    .section-range, .titre-exp {
+        padding-left: 0;
+    }
+    
+    .grille-skill {
+        grid-template: repeat(6,80px) / 600px;
+        padding-left: 0;
+    }
+    .barre-grises {
+        width: 600px;
+    }
+
+}
+
+@media screen and (max-width: 700px) {
+
+    .grille-skill {
+        grid-template: repeat(6,80px) / 400px;
+    }
+    .barre-grises {
+        width: 400px
+    }
+
+}
+@media screen and (max-width: 450px) {
+
+    .section-range{
+        padding-bottom: 100px;
+    }
+    .titre-exp {
+        font-size: 30px;
+        margin: 50px 0 60px 0;
+    }
+    .label-skill {
+        font-size: 20px;
+    }
+    .grille-skill{
+        grid-template: repeat(6,80px) / 300px;
+        grid-gap: 40px;
+    }
+    .barre-grises {
+        width: 300px;
+    }
+}
