--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ a:hover{
 /* ------- Accueil-------------- */
 
 .accueil {
-    background: url(ressources/AccuilSombre.jpg);
+    background: url(ressources/AccuilSombre2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right;
@@ -949,7 +949,7 @@ h1 {
 .section-parallax {
     width: 100%;
     height: 250px;
-    background: url(ressources/AccuilSombre.jpg) no-repeat right / cover fixed;
+    background: url(ressources/AccuilSombre2.jpg) no-repeat right / cover fixed;
     display: flex;
     justify-content: center;
     align-items: center;
