--- a/style.css
+++ b/style.css
@@ -727,11 +727,11 @@ h1 {
     width: 60%;
 }
 .b2 {
-    width: 70%;
+    width: 90%;
     background: rgb(243,237,146);
 }
 .b3 {
-    width: 60%;
+    width: 70%;
     background: rgb(243,237,146);
 }
 .b4 {
@@ -949,7 +949,7 @@ h1 {
 .section-parallax {
     width: 100%;
     height: 250px;
-    background: url(ressources/AccuilSombre2.avif) no-repeat right / cover fixed;
+    background: no-repeat right / cover fixed url(ressources/AccuilSombre2.avif) ;
     display: flex;
     justify-content: center;
     align-items: center;
