Modification lien git

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
 a:hover{
     color: #376fb8;
 }
-/* --------------------------------------------------------------------- Navigation --------------------------------------------- */
+/* ------------------------------- Navigation ------------------------------------ */
 .nav-gauche {
     width: 300px;
     height: 100vh;
@@ -186,7 +186,7 @@ a:hover{
         transition: bottom 300ms ease, transform 300ms 300ms ease;
     }
 }
-/* ----------------------------------------------------------- Accueil--------------------------------------------------------- */
+/* ---------------------- Accueil------------------------------- */
 .accueil {
     background: url(ressources/AccuilSombre2.avif);
     background-repeat: no-repeat;
@@ -428,7 +428,7 @@ h1 {
     }
     
 } 
-/* --------------------------------------------------------Présentation---------------------------------------------------------- */
+/* ------------------------Présentation----------------------------------- */
 .presentation {
     width:100%;
     position: relative;
@@ -561,7 +561,7 @@ h1 {
     }
  }
 
- /* -------------------------------------------------------------- Portfolio ----------------------------------------------------- */
+ /* --------------------------------------------- Portfolio ------------------------------------------ */
 
  .portfolio {
     width: 100%;
@@ -663,7 +663,7 @@ h1 {
     }
   }
 
-  /*------------------------------------------------- Section compétences ------------------------------------------------- */
+  /*--------------------------------------- Section compétences --------------------------------------- */
 
 
   .section-range{
@@ -795,7 +795,7 @@ h1 {
     }
 }
 
-/* ------------------------------------------------------ Expériences ---------------------------------------------------- */
+/* ---------------------- Expériences ---------------------------------- */
 
 .travail-exp {
     width: calc(100% - 300px);
@@ -917,7 +917,7 @@ h1 {
     
     
 }
-/* ---------------------------------------------------- Parallax ------------------------------------------------------- */
+/* ---------------------------------------- Parallax --------------------------------------------- */
 .section-parallax {
     width: 100%;
     height: 250px;
@@ -960,7 +960,7 @@ h1 {
     }
 }
 
-/* ----------------------------------------------------- Contact---------------------------------------------------------------- */
+/* ------------------------------- Contact------------------------------------------- */
 
 h2 span {
     font-weight: bold;
