--- a/style.css
+++ b/style.css
@@ -607,6 +607,56 @@ h1 {
     width: 100%;
     height: auto;
  }
+ /* Modale */
+ .cont-img-port img {
+    
+    cursor: pointer;
+}
+
+/* Style pour le modal */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    padding-top: 60px; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.9); 
+}
+
+/* Style pour l'image agrandie */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Style pour la légende de l'image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+}
+
+/* Style pour le bouton de fermeture */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
  .item h3 {
     padding: 10px 10px 0;
     font-size: 22px;
