--- a/style.css
+++ b/style.css
@@ -618,7 +618,7 @@ h1 {
     display: none; 
     position: fixed; 
     z-index: 1; 
-    padding-top: 60px; 
+    padding: 8% 0 0 10%; 
     left: 0;
     top: 0;
     width: 100%; 
@@ -630,7 +630,7 @@ h1 {
 
 /* Style pour l'image agrandie */
 .modal-content {
-    margin: auto;
+    margin:  auto;
     display: block;
     width: 80%;
     max-width: 700px;
