--- a/style.css
+++ b/style.css
@@ -5,6 +5,23 @@
     padding: 0;
 }
 
+/*  barre de progression */
+.progress-container {
+    position: fixed;
+    width: 100%;
+    height: 8px;
+    top: 0;
+    left: 0;
+
+    z-index: 1000;
+}
+
+.progress-bar {
+    height: 100%;
+    width: 0;
+    background-color: rgba(15, 70, 165, 0.8);
+}
+
 html {
     scroll-behavior: smooth;
 }
